@@ -461,7 +461,7 @@ void GLIDE_ShutDown(Section* sec) {
 }
 
 void GLIDE_Init() {
-    test = new GLIDE(control->GetSection("pci"));
+    test = new GLIDE(control->GetSection("voodoo"));
     AddExitFunction(AddExitFunctionFuncPair(GLIDE_ShutDown),true);
 }
 
@@ -951,7 +951,7 @@ static void process_msg(Bitu value)
 	FP.grFunction0 = (pfunc0)fn_pt[i];
 	FP.grFunction0();
 
-	Section_prop *section=static_cast<Section_prop *>(control->GetSection("pci"));
+	Section_prop *section=static_cast<Section_prop *>(control->GetSection("voodoo"));
 	if (section) glide.splash = section->Get_bool("splash");
 
 #if LOG_GLIDE
