@@ -140,8 +140,16 @@
     still shows 10 slots as before, but you can now go
     to the previous or next page (up to 10 pages) for
     more save slots (100 in total). (Wengier).
-  - Added support for Glide wrapper. The library file
-    glide2x.dll/libglide2x.so/libglide2x.dylib will be
+  - Add config option "voodoo_maxmem" (default: true)
+    to specify whether to use the maximum memory size
+    (12MB instead of the standard 4MB) for the Vooodoo
+    card. The [pci] section is now [voodoo] section,
+    and its only config option "voodoo" is now named
+    "voodoo_card" to make it clear it is for emulating
+    the Voodoo card hardware. (Wengier)
+  - Added support for Glide wrapper. It can be enabled
+    with "glide=true" in [voodoo] section. The library
+    file glide2x.dll/libglide2x.so/libglide2x.dylib is
     required for Glide to work. Be sure to use 32-bit
     dll for 32-bit DOSBox-X binary, and 64-bit dll for
     64-bit DOSBox-X binary. (Wengier)
